opam-version: "2.0"
name: "bancos"
synopsis: "A simple read-optimistic write-exclusive KV-store"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/robur-coop/bancos"
doc: "https://robur-coop.github.io/robur-coop/"
bug-reports: "https://github.com/robur-coop/bancos/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.8.0"}
  "dune-configurator"
  "fmt" {>= "0.8.7"}
  "logs" {>= "0.7.0"}
  "cmdliner" {>= "1.1.0"}
  "crowbar" {>= "0.2" & with-test}
]
available:
  arch != "ppc64" & arch != "arm32" & arch != "x86_32" & arch != "s390x"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/robur-coop/bancos.git"
pin-depends: [
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#610d6c75fe905f9bd11025a49262581bf686d819" ]
]
