opam-version: "2.0"
name: "bank"
synopsis: "A simple in-memory KV-store"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/robur-coop/bancos.git"
doc: "https://robur-coop.github.io/bancos/"
bug-reports: "https://github.com/robur-coop/bancos/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.8.0"}
  "dune-configurator"
  "fmt" {>= "0.8.7"}
  "logs" {>= "0.7.0"}
  "crowbar" {>= "0.2"}
  "hxd" {>= "0.3.2"}
]
available:
  arch != "ppc64" & arch != "arm32" & arch != "x86_32" & arch != "s390x"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/robur-coop/bancos.git"
