(rule
 (copy %{read:../conf/which-atomic} atomic.ml))

(library
 (name atomic)
 (public_name rowex.atomic)
 (modules atomic))

(library
 (name rowex)
 (modules rowex)
 (public_name rowex)
 (libraries atomic fmt logs)
 (ocamlopt_flags -O3)
 (instrumentation
  (backend bisect_ppx))
 (foreign_stubs
  (language c)
  (flags
   -std=c11
   (:standard)
   (:include sse.sexp))
  (names rowex)))

(library
 (name part)
 (modules part)
 (public_name bancos.part)
 (libraries unix miou rowex fmt)
 (ocamlopt_flags -O3 -unbox-closures -unbox-closures-factor 20)
 (foreign_stubs
  (language c)
  (flags
   -std=c11
   (:standard)
   (:include endian.sexp)
   (:include sse.sexp)
   (:include flush.sexp))
  (names part)))

(library
 (name bancos)
 (modules bancos)
 (public_name bancos)
 (libraries rowex part))

(library
 (name bank)
 (modules bank)
 (public_name bank)
 (libraries unix rowex hxd.core hxd.string)
 (foreign_stubs
  (language c)
  (names mem)))

(rule
 (targets endian.sexp)
 (action
  (run ../conf/endian.exe)))

(rule
 (targets sse.sexp)
 (action
  (run ../conf/sse.exe)))

(rule
 (targets flush.sexp)
 (action
  (run ../conf/flush.exe)))
